--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,3 +1,19 @@
-<p>
-  work-list works!
-</p>
+<main role="main-home-wrapper" class="container">
+  <div class="row">
+      <section *ngFor="let works of [workListLeft, workListRight]" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
+          <ul class="grid-lod effect-2" id="grid" #animatedGrid>
+              <li *ngFor="let work of works" class="shown animate">
+                  <figure class="effect-oscar">
+                  <img [src]="work.image" alt="" class="img-responsive"/>
+                  <figcaption>
+                      <h2>{{work.title}} <span></span></h2>
+                      <p>{{work.shortDescription}}</p>
+                      <a [routerLink]="work.id">Ver más</a>
+                  </figcaption>
+              </figure>
+              </li>
+          </ul>
+      </section>
+      <div class="clearfix"></div>
+  </div>
+</main>
