--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
       <section *ngFor="let works of [workListLeft, workListRight]" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
           <ul class="grid-lod effect-2" id="grid" #animatedGrid>
-              <li *ngFor="let work of works" class="shown animate">
+              <li *ngFor="let work of works" animateOnScroll animationName="shown animate">
                   <figure class="effect-oscar">
                   <img [src]="work.image" alt="" class="img-responsive"/>
                   <figcaption>
