--- a/src/app/work/work-detail/work-detail.component.html
+++ b/src/app/work/work-detail/work-detail.component.html
@@ -4,7 +4,7 @@
           <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-4">
                   <header role="work-title">
-                      <h2>{{work.name}}</h2>
+                      <h2>{{work.title}}</h2>
                       <h3>{{work.largeDescription}}</h3>
                   </header>
               </div>
