--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,8 +3,10 @@
   <div class="container">
       <!-- logo -->
           <h1>
-              <a routerLink="/" title="Inicio"><img src="images/app/logo.png" title="fg - DG" alt="fg - DG"/></a>
-            </h1>
+              <a routerLink="/" title="Inicio">
+                <img src="images/app/logo.svg" title="fg - DG" alt="fg - DG" class="logo-svg"/>
+              </a>
+          </h1>
         <!-- logo -->
     </div>
 </header>
