--- a/src/app/work/work-detail/work-detail.component.html
+++ b/src/app/work/work-detail/work-detail.component.html
@@ -4,20 +4,20 @@
           <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-4">
                   <header role="work-title">
-                      <h2>{{work.title}}</h2>
-                      <h3>{{work.largeDescription}}</h3>
+                      <h2>{{workService.currentWork.work.title}}</h2>
+                      <h3>{{workService.currentWork.work.largeDescription}}</h3>
                   </header>
               </div>
               <div class="col-xs-12 col-sm-12 col-md-8">
                   <section>
-                      <p *ngFor="let detail of work.details">{{detail}}</p>
+                      <p *ngFor="let detail of workService.currentWork.work.details">{{detail}}</p>
                   </section>
               </div>
           </div>
           <div class="clearfix"></div>
           <div class="work-images grid">
               <ul class="grid-lod effect-2" id="grid">
-                  <li *ngFor="let image of work.images" animateOnScroll animationName="shown animate">
+                  <li *ngFor="let image of workService.currentWork.work.images" animateOnScroll animationName="shown animate">
                       <img [src]="image" alt="" class="img-responsive"/>
                   </li>
               </ul>
@@ -26,8 +26,8 @@
           <div class="row">
               <nav role="footer-nav">
                   <ul>
-                      <li *ngIf="previous != null"><a [routerLink]="['/works', previous]">&lt; Anterior</a></li>
-                      <li *ngIf="next != null"><a [routerLink]="['/works', next]">Siguiente &gt;</a></li>
+                      <li *ngIf="workService.currentWork.previous != null"><a [routerLink]="['/works', workService.currentWork.previous]">&lt; Anterior</a></li>
+                      <li *ngIf="workService.currentWork.next != null"><a [routerLink]="['/works', workService.currentWork.next]">Siguiente &gt;</a></li>
                   </ul>
               </nav>
           </div>
