agregue icono de ig

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,8 @@
   </nav>
   <!-- nav -->
   <ul role="social-icons">
-      <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-  </ul>
+    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+</ul>
 </footer>
 <!-- footer -->
