--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,8 +31,10 @@
 	
 
 */
-
+/*
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
+*/
+@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap');
 
 html {
 
@@ -159,9 +161,13 @@ a:focus, img:focus, button:focus, .btn:focus {outline: none;}
 ::-moz-selection {background-color:#9ff3da;color:#fff;text-shadow:none;}
 
 ::selection {background-color: #9ff3da;color: #fff;text-shadow: none;}
-
+/*
 @font-face {font-family: 'Open Sans', sans-serif;}
+*/
+@font-face {font-family: 'Libre Caslon Display', serif;}
 
+body{font-family: 'Libre Caslon Display', serif; }
+body, h2, h3, p {font-weight: normal;}
 /*===== Header ===*/
 
 header[role="header"]{ padding-top:40px; padding-bottom:39px}
@@ -178,7 +184,7 @@ transition-duration: 0.6s;transition-property: all;transition-timing-function: e
 
 header[role="header"] nav ul{ display:none; position: fixed; z-index:60; text-align:center; width:100%; height:100%; top:0; left:0; right:0; background-color:rgba(255,255,255,0.8); padding:0; margin:0; padding-top:199px;}
 
-header[role="header"] nav ul > li{ font-weight:800; font-size:42px; display:block}
+header[role="header"] nav ul > li{ /*font-weight:800;*/ font-size:42px; display:block}
 
 header[role="header"] nav ul > li > a{ display:block; line-height:72px; color:#404040}
 
@@ -222,7 +228,7 @@ main[role="main-home-wrapper"] article[role="pge-title-content"],main[role="main
 
 main[role="main-home-wrapper"] article[role="pge-title-content"] header,main[role="main-inner-wrapper"] article[role="pge-title-content"] header{ padding-bottom:19px; padding-top:83px}
 
-main[role="main-home-wrapper"] article[role="pge-title-content"] header h2,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2{ font-size:46px; line-height:53px; color:#404040; font-weight:800}
+main[role="main-home-wrapper"] article[role="pge-title-content"] header h2,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2{ font-size:46px; line-height:53px; color:#404040; /*font-weight:800*/}
 
 main[role="main-home-wrapper"] article[role="pge-title-content"] header h2 span,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2 span{ display:block; font-size:80px; color:#9ff3da; padding-bottom:15px}
 
@@ -280,9 +286,9 @@ main[role="main-inner-wrapper"] .thumbnails-pan section figure,main[role="main-i
 
 main[role="main-inner-wrapper"] .thumbnails-pan section figure figcaption{ position:absolute; bottom:-50%; left:0; right:0; background-color:#9ff3da; margin:0 69px; text-align:center; color:#FFF; padding-top:16px; padding-bottom:27px}
 
-main[role="main-inner-wrapper"] .thumbnails-pan section figure figcaption h3{ font-size:21px; line-height:22px; font-weight:300}
+main[role="main-inner-wrapper"] .thumbnails-pan section figure figcaption h3{ font-size:21px; line-height:22px; /*font-weight:300*/}
 
-main[role="main-inner-wrapper"] .thumbnails-pan section figure figcaption h5{ text-transform:uppercase; font-size:13px; line-height:14px; font-weight:bold}
+main[role="main-inner-wrapper"] .thumbnails-pan section figure figcaption h5{ text-transform:uppercase; font-size:13px; line-height:14px; /*font-weight:bold*/}
 
 main[role="main-inner-wrapper"] .thumbnails-pan section figure:hover,section.blog-content:hover article{ background-color:#9ff3da; color:#FFF}
 
@@ -298,11 +304,11 @@ section.blog-content{ margin-bottom:29px}
 
 section.blog-content figure{ overflow:hidden; position:relative;background-color: rgba(255,255,255,0.4); cursor:pointer}
 
-section.blog-content figure .post-date{ text-align:center; color:#FFF; font-weight:800; font-size:14px; line-height:18px; text-transform:uppercase; display:block; background-color:#9ff3da; width:130px; height:130px; position:absolute; left:0; top:0; padding-top:41px; z-index:50}
+section.blog-content figure .post-date{ text-align:center; color:#FFF; /*font-weight:800;*/ font-size:14px; line-height:18px; text-transform:uppercase; display:block; background-color:#9ff3da; width:130px; height:130px; position:absolute; left:0; top:0; padding-top:41px; z-index:50}
 
 section.blog-content figure .post-date span{ font-size:50px; line-height:35px; display:block}
 
-section.blog-content  article{ font-size:21px; line-height:30px; color:#FFF;  font-weight:800; color:#343434; padding-left:42px; padding-top:33px; padding-bottom:31px;}
+section.blog-content  article{ font-size:21px; line-height:30px; color:#FFF;  /*font-weight:800;*/ color:#343434; padding-left:42px; padding-top:33px; padding-bottom:31px;}
 
 section.blog-content:hover figure img{ opacity:0.5}
 
@@ -338,7 +344,7 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .contat-from-wrapper textarea{ border-bottom:1px solid #bbbbbb; border-left:none; border-right:none; border-top:none; height:77px; margin-top:56px}
 
-.contat-from-wrapper input[type="submit"]{ display:block; border:none; outline:none; width:200px; line-height:60px; text-transform:uppercase; font-size:21px; color:#FFF; font-weight:800; letter-spacing:2px; background-color:#e84d49; margin:41px auto; margin-bottom:0}
+.contat-from-wrapper input[type="submit"]{ display:block; border:none; outline:none; width:200px; line-height:60px; text-transform:uppercase; font-size:21px; color:#FFF; /*font-weight:800;*/ letter-spacing:2px; background-color:#e84d49; margin:41px auto; margin-bottom:0}
 
 .contat-from-wrapper input[type="submit"]:hover{background-color:#f8524e}
 
@@ -346,9 +352,9 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .work-details,.blog-details{ padding:0; margin-top:73px}
 
-.work-details header h2{ color:#343434; font-size:36px; font-weight:800}
+.work-details header h2{ color:#343434; font-size:36px; /* font-weight:800 */}
 
-.work-details header a{ display:inline-block; color:#9ff3da; font-size:18px;font-weight:800;padding-top:3px}
+.work-details header a{ display:inline-block; color:#9ff3da; font-size:18px;/* font-weight:800; */padding-top:3px}
 
 .work-details header a i{ color:#0d0d0d; padding-left:10px}
 
@@ -356,9 +362,9 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .work-details header a:hover i{ color:#9ff3da}
 
-.work-details p{ font-size:16px; color:#666666; line-height:30px; margin-bottom:20px; font-weight:300}
+.work-details p{ font-size:18px; color:#666666; line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
 
-.work-details p strong{ font-weight:800}
+.work-details p strong{ /* font-weight:800 */}
 
 .work-images{ margin-top:46px}
 
@@ -368,15 +374,15 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .bog-header { padding-bottom:62px}
 
-.bog-header h3,.comments-pan h3,.commentys-form h4{ color:#404040;font-weight:800; padding-bottom:24px; display:block}
+.bog-header h3,.comments-pan h3,.commentys-form h4{ color:#404040;/* font-weight:800; */ padding-bottom:24px; display:block}
 
 .bog-header h3 span{ color:#9ff3da}
 
-.bog-header h2{ font-size:36px; font-weight:normal}
+.bog-header h2{ font-size:36px; /* font-weight:normal */}
 
 .blog-details .enter-content{ margin-top:62px}
 
-.blog-details .enter-content p{ font-size:16px; line-height:30px; font-weight:300; margin-bottom:23px}
+.blog-details .enter-content p{ font-size:16px; line-height:30px; /* font-weight:300; */ margin-bottom:23px}
 
 .comments-pan{border-top:2px solid #dedede; padding-top:15px}
 
@@ -388,13 +394,13 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .comments-reply li figure{ float:left; width:70px; background-color:#000}
 
-.comments-reply li section{ float:left; padding-left:30px; font-size:16px; line-height:30px; font-weight:300; color:#343434;width: 92%;}
+.comments-reply li section{ float:left; padding-left:30px; font-size:16px; line-height:30px; /* font-weight:300; */ color:#343434;width: 92%;}
 
 .comments-reply li section .date-pan{ font-size:14px; line-height:18px; padding-bottom:25px}
 
-.comments-reply li section h4{font-weight:800; color:#404040; font-size:21px; margin-bottom:6px; margin-top:0}
+.comments-reply li section h4{/* font-weight:800; */ color:#404040; font-size:21px; margin-bottom:6px; margin-top:0}
 
-.comments-reply li section h4 a{ font-size:16px; color:#9ff3da;font-weight:400; display:inline-block; padding-left:20px}
+.comments-reply li section h4 a{ font-size:16px; color:#9ff3da;/* font-weight:400; */ display:inline-block; padding-left:20px}
 
 .reply-pan{ clear:both; display:block; margin-left:100px;padding-top:39px }
 
@@ -410,7 +416,7 @@ article[role="pge-title-content"].contact-header p a:hover{color:#9ff3da; text-d
 
 .commentys-form input[type="text"]:focus,.commentys-form input[type="email"]:focus,.commentys-form input[type="url"]:focus,.commentys-form textarea:focus{ border-bottom-color:#000}
 
-.commentys-form input[type="button"]{ padding:0 36px; text-transform:uppercase; display:inline-block; font-size:21px; line-height:60px; color:#FFF; font-weight: bold; text-align:center; border:none; outline:none; background-color:#9ff3da; margin-top:50px}
+.commentys-form input[type="button"]{ padding:0 36px; text-transform:uppercase; display:inline-block; font-size:21px; line-height:60px; color:#FFF; /* font-weight: bold; */ text-align:center; border:none; outline:none; background-color:#9ff3da; margin-top:50px}
 
 .commentys-form input[type="button"]:hover{ background-color:#ff5c5c}
 
