agreggue el menu en el header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,22 @@
 <!-- header -->
 <header role="header">
   <div class="container">
-      <!-- logo -->
+    <!-- logo -->
           <h1>
               <a routerLink="/" title="Inicio">
                 <img src="images/app/logo.svg" title="fg - DG" alt="fg - DG" class="logo-svg"/>
               </a>
           </h1>
-        <!-- logo -->
-    </div>
+      <!-- logo -->
+      <!-- nav -->
+      <nav role="header-nav">
+        <ul>
+            <li><a routerLink="/about" title="Sobre mi">Sobre mí</a></li>
+            <li><a routerLink="/philosophy" title="Filosofia">Filosofía</a></li>
+            <li><a routerLink="/contact" title="Contacto">Contacto</a></li>
+          </ul>
+      </nav>
+      <!-- nav -->
+  </div>
 </header>
 <!-- header -->
