--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -11,9 +11,9 @@
 @media (min-width: 768px) and (max-width: 991px) {
 
 	header[role="header"]{ padding:4% 0;}
-
+/*
 	header[role="header"] nav ul{ padding-top:10%}
-
+*/
 	main[role="main-home-wrapper"] article[role="pge-title-content"],main[role="main-inner-wrapper"] article[role="pge-title-content"]{ padding-left:0}
 
 	main[role="main-home-wrapper"] article[role="pge-title-content"] header,main[role="main-inner-wrapper"] article[role="pge-title-content"] header{ padding-top:0}
@@ -51,13 +51,13 @@
 @media (min-width: 481px) and (max-width: 767px) {
 
 	header[role="header"]{ padding:4% 0;}
-
+/*
 	header[role="header"] nav ul{ padding-top:10%}
 
 	header[role="header"] nav ul > li{ font-size:30px}
 
 	header[role="header"] nav ul > li > a{ line-height:55px}
-
+*/
 	main[role="main-home-wrapper"] article[role="pge-title-content"],main[role="main-inner-wrapper"] article[role="pge-title-content"]{ padding-left:0}
 
 	main[role="main-home-wrapper"] article[role="pge-title-content"] header,main[role="main-inner-wrapper"] article[role="pge-title-content"] header{ padding-top:10px}
@@ -133,13 +133,13 @@
 @media (max-width: 480px) {
 
 	header[role="header"]{ padding:4% 0;}
-
+/*
 	header[role="header"] nav ul{ padding-top:10%}
-
-	header[role="header"] nav ul > li{ font-size:30px}
-
+*/
+	header[role="header"] nav ul > li{font-size: 12px; margin-left:10px}
+/*
 	header[role="header"] nav ul > li > a{ line-height:55px}
-
+*/
 	main[role="main-home-wrapper"] article[role="pge-title-content"],main[role="main-inner-wrapper"] article[role="pge-title-content"]{ padding-left:0}
 
 	main[role="main-home-wrapper"] article[role="pge-title-content"] header,main[role="main-inner-wrapper"] article[role="pge-title-content"] header{ padding-top:10px}
@@ -155,6 +155,8 @@
 	footer[role="footer"]{ padding:40px 0}
 
 	footer[role="footer"] nav{ padding:15px 0}
+
+	footer[role="footer"] nav ul > li{font-size: 12px; margin-left:10px}
 
 	main[role="main-inner-wrapper"] .about-content{ padding:5%}
 
