header con menu hamburguesa

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,11 +8,11 @@
   <!-- nav -->
   <nav role="footer-nav">
     <ul>
-        <li><a routerLink="/" title="Inicio">Inicio</a></li>
-          <li><a routerLink="/about" title="Sobre mi">Sobre mí</a></li>
-          <li><a routerLink="/philosophy" title="Filosofia">Filosofía</a></li>
-          <li><a routerLink="/contact" title="Contacto">Contacto</a></li>
-      </ul>
+        <li><a routerLink="/about" title="MARCA PERSONAL">MARCA PERSONAL</a></li>
+        <li><a routerLink="/" title="TRABAJOS">TRABAJOS</a></li>
+        <li><a routerLink="/philosophy" title="HACER">HACER</a></li>
+        <li><a routerLink="/contact" title="CONTACTO">CONTACTO</a></li>
+    </ul>
   </nav>
   <!-- nav -->
   <ul role="social-icons">
