--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,30 +1,24 @@
-<!-- header -->
-<header role="header">
-  <!-- div class="container" -->
-<!-- Static navbar -->
-<nav class="navbar navbar-default navbar-fixed-top container">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" routerLink="/" title="Inicio">
-        <img src="images/app/f_icon.svg" title="fg - DG" alt="fg - DG" class="logo-svg" style="height: 50px;"/>
-      </a>      
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink="/about" title="Sobre mi">Sobre mí</a></li>
-        <li><a routerLink="/philosophy" title="Filosofia">Filosofía</a></li>
-        <li><a routerLink="/contact" title="Contacto">Contacto</a></li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div><!--/.container-fluid -->
-  <p class="navbar-text">Flavia Giuistino - DG</p>
-</nav>
-    <!-- /div -->
-  </header>
-<!-- header -->
+    	<!-- header -->
+      <header role="header">
+        <div class="container">
+            <!-- logo -->
+                <h1>
+                  <a class="navbar-brand" routerLink="/" title="Inicio">
+                    <img src="images/app/f_icon.svg" title="fg - DG" alt="fg - DG" class="logo-svg" style="height: 50px;"/>
+                  </a>      
+                  </h1>
+              <!-- logo -->
+              <!-- nav -->
+              <nav role="header-nav" class="navy" [ngClass]="isMenuCollapsed ? '' : 'menu-open'">
+                <div id="menu-button" (click)="clickEvent()" [ngClass]="isMenuCollapsed ? '' : 'open'"><span></span><span></span><span></span>Flavia Giuistino - DG</div>
+                  <ul [ngClass]="isMenuCollapsed ? '' : 'open'">
+                    <li><a routerLink="/about" title="MARCA PERSONAL" (click)="clickEvent()">MARCA PERSONAL</a></li>
+                    <li><a routerLink="/" title="TRABAJOS" (click)="clickEvent()">TRABAJOS</a></li>
+                    <li><a routerLink="/philosophy" title="HACER" (click)="clickEvent()">HACER</a></li>
+                    <li><a routerLink="/contact" title="CONTACTO" (click)="clickEvent()">CONTACTO</a></li>
+                  </ul>
+              </nav>
+              <!-- nav -->
+          </div>
+      </header>
+  <!-- header -->
