--- a/src/css/style.css
+++ b/src/css/style.css
@@ -175,21 +175,20 @@ a:focus, img:focus, button:focus, .btn:focus {outline: none;}
 body{font-family: 'Libre Caslon Display', serif; }
 body, h2, h3, p {font-weight: normal;}
 /*===== Header ===*/
-
-header[role="header"]{ padding-top:40px; padding-bottom:39px}
+header[role="header"]{ padding-top:40px; padding-bottom:39px; }
 
 header[role="header"] h1{ padding:0; margin:0}
 
 header[role="header"] h1 > a{ margin:0 auto; max-width:150px; display:block; }
 
 header[role="header"] h1 > a > img { width: 100%; }
-/*
+
 header[role="header"] nav{ padding-top:10px;transition-delay: 0s;
 
 transition-duration: 0.6s;transition-property: all;transition-timing-function: ease;}
 
 header[role="header"] nav ul{ display:none; position: fixed; z-index:60; text-align:center; width:100%; height:100%; top:0; left:0; right:0; background-color:rgba(255,255,255,0.8); padding:0; margin:0; padding-top:199px;}
-
+header[role="header"] nav ul.open { display:block; }
 header[role="header"] nav ul > li{ font-weight:800; font-size:42px; display:block}
 
 header[role="header"] nav ul > li > a{ display:block; line-height:72px; color:#404040}
@@ -224,7 +223,9 @@ header[role="header"] nav #menu-button.open span:nth-child(2) {opacity: 0;left: 
 header[role="header"] nav #menu-button.open span:nth-child(3) {top: 10px;
 
 -webkit-transform: rotate(-135deg);-moz-transform: rotate(-135deg);-o-transform: rotate(-135deg);transform: rotate(-135deg);}
-*/
+
+
+/*
 header[role="header"] nav{ padding-top: 30px;}
 
 header[role="header"] nav > ul{ text-align:center; padding:0; margin:0}
@@ -234,7 +235,7 @@ header[role="header"] nav > ul > li{ display: inline-block; text-transform:upper
 header[role="header"] nav > ul > li > a{ color:var(--color-03)}
 	
 header[role="header"] nav > ul > li:hover a{ text-decoration:none; color:var(--color-01)}
-	
+*/	
 /*===== main ===*/
 
 main[role="main-home-wrapper"],main[role="main-inner-wrapper"] { padding-bottom:90px}
