agregue detalle en el home

--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,5 +1,8 @@
 <main role="main-home-wrapper" class="container">
-  <div class="row">
+    <div class="row">
+        <section class="col-xs-12 col-sm-12 col-md-12 home-detail">
+            <p *ngFor="let detail of workListDetails">{{detail}}</p>
+        </section>
       <section *ngFor="let works of [workListLeft, workListRight]" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
           <ul class="grid-lod effect-2" id="grid" #animatedGrid>
               <li *ngFor="let work of works" animateOnScroll animationName="shown animate">
