cambio de logo y ajuste tamaños y alineaciones

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer role="footer">
   <!-- logo -->
       <h1>
-          <a routerLink="/" title="Inicio"><img src="images/app/logo.png" title="fg - DG" alt="fg - DG"/></a>
+          <a routerLink="/" title="Inicio"><img src="images/app/logo.svg" title="fg - DG" alt="fg - DG"/></a>
       </h1>
   <!-- logo -->
   <!-- nav -->
