--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <!-- logo -->
                 <h1>
                   <a class="navbar-brand" routerLink="/" title="Inicio">
-                    <img src="images/app/f_icon.svg" title="fg - DG" alt="fg - DG" class="logo-svg" style="height: 50px;"/>
+                    <img src="images/app/logo.svg" title="fg - DG" alt="fg - DG" class="logo-svg"/>
                   </a>      
                   </h1>
               <!-- logo -->
