agregue service module

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a routerLink="/about" title="MARCA PERSONAL">MARCA PERSONAL</a></li>
         <li><a routerLink="/" title="TRABAJOS">TRABAJOS</a></li>
-        <li><a routerLink="/philosophy" title="HACER">HACER</a></li>
+        <li><a routerLink="/service" title="HACER">HACER</a></li>
         <li><a routerLink="/contact" title="CONTACTO">CONTACTO</a></li>
     </ul>
   </nav>
