--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
                   <ul [ngClass]="isMenuCollapsed ? '' : 'open'">
                     <li><a routerLink="/about" title="MARCA PERSONAL" (click)="clickEvent()">MARCA PERSONAL</a></li>
                     <li><a routerLink="/" title="TRABAJOS" (click)="clickEvent()">TRABAJOS</a></li>
-                    <li><a routerLink="/philosophy" title="HACER" (click)="clickEvent()">HACER</a></li>
+                    <li><a routerLink="/service" title="HACER" (click)="clickEvent()">HACER</a></li>
                     <li><a routerLink="/contact" title="CONTACTO" (click)="clickEvent()">CONTACTO</a></li>
                   </ul>
               </nav>
