--- a/src/css/style.css
+++ b/src/css/style.css
@@ -179,9 +179,9 @@ header[role="header"]{ padding-top:40px; padding-bottom:39px; }
 
 header[role="header"] h1{ padding:0; margin:0}
 
-header[role="header"] h1 > a{ margin:0 auto; max-width:150px; display:block; }
+header[role="header"] h1 > a{ margin:0 auto; /*max-width:150px;*/ display:block; }
 
-header[role="header"] h1 > a > img { width: 100%; height: 100px; margin-top: -40px;}
+header[role="header"] h1 > a > img { width: 100PX%; height: 100px; margin-top: -40px;}
 
 header[role="header"] nav{ padding-top:10px;transition-delay: 0s;
 
@@ -262,7 +262,11 @@ nav[role="footer-nav"] > ul > li:hover a{ text-decoration:none; color:var(--colo
 
 .home-detail { padding-left: 15px; padding-right: 15px; margin-top:15px; margin-bottom: 15px;}
 
-.home-detail p{ font-size:24px; color:#666666; line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
+.home-detail h2 { /*color:var(--color-01);*/ font-size:32px; letter-spacing: 2px;}
+
+.home-detail h3 { margin-top: 10px;; margin-bottom: 20px; font-size: 30px; letter-spacing: 2px;}
+
+.home-detail p { font-size: 20px; color:#666666; line-height:30px; margin-bottom: 0px; letter-spacing: 2px; text-transform: uppercase;}
 
 /*===== footer ===*/
 
