--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,9 +1,9 @@
 <main role="main-home-wrapper" class="container">
     <div class="row">
         <section class="col-xs-12 col-sm-12 col-md-12 home-detail">
-            <h2 [innerHtml]="workList.title"></h2>
-            <h3 [innerHtml]="workList.subtitle"></h3>
-            <p *ngFor="let detail of workList.details" [innerHtml]="detail"></p>
+            <h2 [innerHtml]="workList?.title"></h2>
+            <h3 [innerHtml]="workList?.subtitle"></h3>
+            <p *ngFor="let detail of workList?.details" [innerHtml]="detail"></p>
         </section>
       <section *ngFor="let works of [workListLeft, workListRight]" class="col-xs-12 col-sm-6 col-md-6 col-lg-6 grid">
           <ul class="grid-lod effect-2" id="grid" #animatedGrid>
