--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,7 +37,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&display=swap');
 */
 :root {
-	--color-01: #9ff3da;
+	--color-01: #70d2b5; /* #9ff3da; */
 	--color-02: #343434;
 	--color-03: #9d9d9d;
   }
@@ -449,3 +449,14 @@ article[role="pge-title-content"].contact-header p a:hover{color:var(--color-01)
 img.logo-svg .st0:hover {fill:none;stroke:#63C1CE;}
 img.logo-svg .st1:hover {fill:#63C1CE;stroke:#63C1CE;}
 img.logo-svg .st2:hover {fill:#1D1D1B;stroke:#1D1D1B;}
+
+.service-details { padding:0; margin-top:73px}
+.service-details header h2{ color:var(--color-01); font-size:36px; /* font-weight:800 */}
+.service-details header a{ display:inline-block; color:var(--color-01); font-size:18px;/* font-weight:800; */padding-top:3px}
+.service-details header a i{ color:#0d0d0d; padding-left:10px}
+.service-details header a:hover{ color:#0d0d0d; text-decoration:none}
+.service-details header a:hover i{ color:var(--color-01)}
+.service-details p { font-size:18px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
+.service-details p i { font-size:14px; color: var(--color-01)}
+.service-details p.title { font-size:36px; line-height:40px; letter-spacing: 2px; color: var(--color-01);}
+.service-details p.detail {margin-left: 20px;}
