cambios en estilo de about

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <main role="main-inner-wrapper" class="container">
   <!-- about -->
-      <div class="work-details">
+      <div class="about-details">
           <div class="row">
               <div class="col-xs-12 col-sm-12 col-md-4">
                   <header role="work-title">
