--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -226,4 +226,9 @@
 
     .home-detail p { font-size: 18px; line-height:24px; }
 
+	.service-details, .about-details {
+		margin-top: 30px;
+		margin-bottom: 30px;
+	}
+
 }
