--- a/src/css/style.css
+++ b/src/css/style.css
@@ -459,4 +459,12 @@ img.logo-svg .st2:hover {fill:#1D1D1B;stroke:#1D1D1B;}
 .service-details p { font-size:18px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
 .service-details p i { font-size:14px; color: var(--color-01)}
 .service-details p.title { font-size:36px; line-height:40px; letter-spacing: 2px; color: var(--color-01);}
-.service-details p.detail {margin-left: 20px;}
+.service-details p.detail { margin-left: 20px;}
+
+.about-details { padding:0; margin-top:73px}
+.about-details header h2{ color:var(--color-01); font-size:36px; /* font-weight:800 */}
+.about-details header a{ display:inline-block; color:var(--color-01); font-size:18px;/* font-weight:800; */padding-top:3px}
+.about-details header a i{ color:#0d0d0d; padding-left:10px}
+.about-details header a:hover{ color:#0d0d0d; text-decoration:none}
+.about-details header a:hover i{ color:var(--color-01)}
+.about-details p { font-size: 20px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
