--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,21 @@
 <main role="main-inner-wrapper" class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
             <article role="pge-title-content" class="contact-header">
                 <header>
                     <h2><span>{{contact?.title}}</span> {{contact?.description}}</h2>
                 </header>
                 <p>
-                    <a href="tel:{{contact?.phone}}"><i class="fa fa-phone" aria-hidden="true"></i></a>{{contact?.phone}}
-                    <a href="mailto:{{contact?.email}}"><i class="fa fa-envelope" aria-hidden="true"></i></a>{{contact?.email}}
+                    <a href="tel:{{contact?.phone}}">CEL: <!--<i class="fa fa-phone" aria-hidden="true"></i>-->{{contact?.phone}}</a>
                 </p>
+                <p>
+                    <a href="mailto:{{contact?.email}}">MAIL: <!--<i class="fa fa-envelope" aria-hidden="true"></i>-->{{contact?.email}}</a>
+                </p>
+                    <ul role="social-icons">
+                        <li *ngFor="let item of contact?.social">
+                            <a [href]="item.url" target="_blank"><i [className]="'fa ' + item.fa" aria-hidden="true"></i></a>
+                        </li>
+                    </ul>
             </article>
         </div>
         <div class="clearfix"></div>
