--- a/src/css/style.css
+++ b/src/css/style.css
@@ -246,7 +246,7 @@ main[role="main-home-wrapper"] article[role="pge-title-content"] header,main[rol
 
 main[role="main-home-wrapper"] article[role="pge-title-content"] header h2,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2{ font-size:46px; line-height:53px; color:#404040; /*font-weight:800*/}
 
-main[role="main-home-wrapper"] article[role="pge-title-content"] header h2 span,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2 span{ display:block; font-size:80px; color:var(--color-01); padding-bottom:15px}
+main[role="main-home-wrapper"] article[role="pge-title-content"] header h2 span,main[role="main-inner-wrapper"] article[role="pge-title-content"] header h2 span{ display:block; font-size:80px; color:var(--color-01); padding-bottom:60px}
 
 main[role="main-home-wrapper"] article[role="pge-title-content"] p,main[role="main-inner-wrapper"] article[role="pge-title-content"] p{ font-size:20px; line-height:30px; color:#454545}
 
@@ -262,11 +262,12 @@ nav[role="footer-nav"] > ul > li:hover a{ text-decoration:none; color:var(--colo
 
 .home-detail { padding-left: 15px; padding-right: 15px; margin-top:15px; margin-bottom: 15px;}
 
-.home-detail h2 { /*color:var(--color-01);*/ font-size:32px; letter-spacing: 2px;}
+.home-detail h2 { /*color:var(--color-01);*/ font-size:28px; letter-spacing: 2px;}
+.home-detail h2 span { color:var(--color-01); }
 
-.home-detail h3 { margin-top: 10px;; margin-bottom: 20px; font-size: 30px; letter-spacing: 2px;}
+.home-detail h3 { margin-top: 10px;; margin-bottom: 20px; font-size: 28px; letter-spacing: 2px;}
 
-.home-detail p { font-size: 20px; color:#666666; line-height:30px; margin-bottom: 0px; letter-spacing: 2px; text-transform: uppercase;}
+.home-detail p { font-size: 20px; color:var(--color-02); line-height:30px; margin-bottom: 0px; letter-spacing: 2px; text-transform: uppercase;}
 
 /*===== footer ===*/
 
@@ -340,7 +341,7 @@ section.blog-content:hover figure img{ opacity:0.5}
 
 article[role="pge-title-content"].contact-header{ padding-bottom:218px}
 
-article[role="pge-title-content"].contact-header p a{ color:var(--color-02); padding-right:34px}
+article[role="pge-title-content"].contact-header p a{ color:var(--color-02); font-size: 24px}
 
 article[role="pge-title-content"].contact-header p a:hover{color:var(--color-01); text-decoration:none}
 
@@ -372,6 +373,12 @@ article[role="pge-title-content"].contact-header p a:hover{color:var(--color-01)
 
 .contat-from-wrapper input[type="submit"]:hover{background-color:#f8524e}
 
+main[role="main-inner-wrapper"] article[role="pge-title-content"][class="contact-header"] h2{ font-size:46px; line-height:53px; color: var(--color-02); }
+main[role="main-inner-wrapper"] article[role="pge-title-content"][class="contact-header"] ul[role="social-icons"] { padding:0; margin:0; padding-top:16px;}
+main[role="main-inner-wrapper"] article[role="pge-title-content"][class="contact-header"] ul[role="social-icons"] > li { display: inline-block; margin:0 6.5px}
+main[role="main-inner-wrapper"] article[role="pge-title-content"][class="contact-header"] ul[role="social-icons"] > li > a { display:block; width:42px; height:42px; background-color:var(--color-03); color:#FFF; line-height:42px; font-size:20px; border-radius:100%; text-align: center}
+main[role="main-inner-wrapper"] article[role="pge-title-content"][class="contact-header"] ul[role="social-icons"] > li:hover a { background-color:var(--color-01)}
+
 /*== Work Details ==*/
 
 .work-details,.blog-details{ padding:0; margin-top:73px}
@@ -386,7 +393,7 @@ article[role="pge-title-content"].contact-header p a:hover{color:var(--color-01)
 
 .work-details header a:hover i{ color:var(--color-01)}
 
-.work-details p{ font-size:18px; color:#666666; line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
+.work-details p{ font-size:20px; color:var(--color-02); line-height:30px; margin-bottom: 10px; /* font-weight:300 */}
 
 .work-details p i { font-size:14px; }
 
@@ -456,15 +463,16 @@ img.logo-svg .st2:hover {fill:#1D1D1B;stroke:#1D1D1B;}
 .service-details header a i{ color:#0d0d0d; padding-left:10px}
 .service-details header a:hover{ color:#0d0d0d; text-decoration:none}
 .service-details header a:hover i{ color:var(--color-01)}
-.service-details p { font-size:18px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
+.service-details p { font-size: 20px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
 .service-details p i { font-size:14px; color: var(--color-01)}
 .service-details p.title { font-size:36px; line-height:40px; letter-spacing: 2px; color: var(--color-01);}
 .service-details p.detail { margin-left: 20px;}
 
 .about-details { padding:0; margin-top:73px}
-.about-details header h2{ color:var(--color-01); font-size:36px; /* font-weight:800 */}
+.about-details header h2{ color:var(--color-01); font-size:36px; text-transform: uppercase}
+.about-details header h3{ color:var(--color-02); font-size:36px; text-transform: uppercase}
 .about-details header a{ display:inline-block; color:var(--color-01); font-size:18px;/* font-weight:800; */padding-top:3px}
 .about-details header a i{ color:#0d0d0d; padding-left:10px}
 .about-details header a:hover{ color:#0d0d0d; text-decoration:none}
 .about-details header a:hover i{ color:var(--color-01)}
-.about-details p { font-size: 20px; color:var(--color-02); line-height:30px; margin-bottom: 0px; /* font-weight:300 */}
+.about-details p { font-size: 20px; color:var(--color-02); line-height:30px; margin-bottom: 10px; /* font-weight:300 */}
