--- a/src/app/work/work-detail/work-detail.component.html
+++ b/src/app/work/work-detail/work-detail.component.html
@@ -10,7 +10,7 @@
               </div>
               <div class="col-xs-12 col-sm-12 col-md-8">
                   <section>
-                      <p *ngFor="let detail of work?.details">{{detail}}</p>
+                      <p *ngFor="let detail of work?.details" [innerHtml]="detail"></p>
                   </section>
               </div>
           </div>
